--- a/thanks.html
+++ b/thanks.html
@@ -196,6 +196,22 @@
 		}
 	{% endif %}																									
 	</script>
+
+{% if page.custom_fields.after_action_next_step == "flow" %}
+	<style>
+		#thanks {
+			display: none;
+		}
+	</style>
+	<script>
+		jQuery(document).ready(function($){
+		window.parent.postMessage({
+			type: 'donationSuccess',
+			'donation': true
+		});
+		});
+	</script>
+{% endif %}
 	<section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 		<div class="section-inner">
 			<form class="ak-form dummy" name="act" method="POST" action="/act/" accept-charset="utf-8">
