Add UserCentrics compliance snippet

--- a/wrapper.html
+++ b/wrapper.html
@@ -4,6 +4,8 @@
 	{% endif %}>
 
 <head>
+	<!-- Usercentrics snippet -->
+	{% include "350_cookie_banner.html" %}
 
 	<!-- Google Optimise Anti-flicker snippet -->
 	<script>
