--- a/wrapper.html
+++ b/wrapper.html
@@ -5,7 +5,7 @@
 
 <head>
 	<!-- Usercentrics snippet -->
-	{% include "350_cookie_banner.html" %}
+	{% include "./350_cookie_banner.html" %}
 
 	<!-- Google Optimise Anti-flicker snippet -->
 	<script>
