Update UserCentrics script

--- a/350_cookie_banner.html
+++ b/350_cookie_banner.html
@@ -1,19 +1,23 @@
 {% if geoip.is_gdpr_country %}
 <!-- BEGIN UserCentrics related code -->
 <link rel="preconnect" href="//app.usercentrics.eu">
-<link rel="preconnect" href="//api.usercentrics.eu">
+<link rel="preconnect" href="//web.cmp.usercentrics.eu">
 <link rel="preconnect" href="//privacy-proxy.usercentrics.eu">
 <link rel="preload" href="//app.usercentrics.eu/browser-ui/latest/loader.js" as="script">
 <link rel="preload" href="//privacy-proxy.usercentrics.eu/latest/uc-block.bundle.js" as="script">
-<script id="usercentrics-cmp" src="https://app.usercentrics.eu/browser-ui/latest/loader.js" data-settings-id="AcMHYQUX2Y80Au" async></script>
+<script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="AcMHYQUX2Y80Au" async></script>
 <script type="application/javascript" src="https://privacy-proxy.usercentrics.eu/latest/uc-block.bundle.js"></script>
 <script>
-  // reload page on opt-in
-  uc.reloadOnOptIn( [
-	'BJz7qNsdj-7', // YouTube
-	'kbmJpLAUf', // Flourish
-	'Hko_qNsui-Q' // reCAPTCHA v3
-  ] );
+// reload page on opt-in
+uc.reloadOnOptIn( [
+  'BJz7qNsdj-7', // YouTube
+  'Hko_qNsui-Q' // reCAPTCHA v3
+] );
+// deactivate blocking for critial resources
+uc.deactivateBlocking( [
+  'BJ59EidsWQ', // Google Tag Manager
+  'gIwEsybsHImyP9' // Actionkit
+] );
 </script>
 <!-- END UserCentrics related code -->
 {% endif %}
