--- a/donate.html
+++ b/donate.html
@@ -140,6 +140,13 @@
     color: white;
   }
 
+  /* Tablet Styles */
+  @media screen and (max-width:900px) {
+    #jump-to-form {
+      display: none;
+    }
+  }
+
   /* Mobile Styles */
   @media screen and (max-width:720px) {
     .ak-donate-menu.ak-donate-three-step {
@@ -151,6 +158,7 @@
     }
     #action-lead .section-inner {
       padding: 10px;
+      width: 100%;
     }
     .payments-container {
       min-width: 330px !important;
