Fix some design issues

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -229,6 +229,10 @@ Custom template for same-page post-AJAX submit share ask.
 #afteraction-flow-share .section {
 	padding: 1em;
 }
+
+#site-footer {
+	display: none;
+}
 @media screen and (max-width:900px) {
 	#jump-to-form {
 		display: none;
