--- a/donate.html
+++ b/donate.html
@@ -149,6 +149,9 @@
 
   /* Mobile Styles */
   @media screen and (max-width:720px) {
+    #action-pretitle span.highlight {
+      line-height: 2.2;
+    }
     .ak-donate-menu.ak-donate-three-step {
       display: none;
     }
@@ -161,7 +164,7 @@
       width: 100%;
     }
     .payments-container {
-      min-width: 330px !important;
+      min-width: 300px !important;
     }
     #body-mobile-background {
       background-image: url('{{ page.custom_fields.page_background_image }}') !important;
